# voyis-interview

./: .gitignore  CMakeLists.txt  DESIGN.md  ENHANCEMENT_SUMMARY.md  FINAL_CHECKLIST.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  build.sh  demo.sh  download_images.sh  install_dependencies.sh  run_all.sh  stop_all.sh  test_resilience.sh
include/: database_manager.h  image_publisher.h  logger.h  message_protocol.h  sift_processor.h
src/common/: logger.cpp  message_protocol.cpp
src/data_logger/: database_manager.cpp  main.cpp
src/feature_extractor/: main.cpp  sift_processor.cpp
src/image_generator/: image_publisher.cpp  main.cpp
tests/: test_database.cpp  test_message_protocol.cpp
